[package]
name = "net"
version = "0.1.0"
edition = "2021"


[dependencies]
pin-project.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["net"] }
tower.workspace = true
socket2.workspace = true
async-trait.workspace = true
dashmap.workspace = true
lazy_static.workspace = true
futures.workspace = true
bb8.workspace = true
tokio-tower = "0.6.0"